--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "task",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "http://namits27.github.io/random-grid",
+	"homepage": "http://namits27.github.io/Random-Grid",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
